# esp32_uds_gateway

./: .gitignore  CMakeLists.txt  README.md  README_GITHUB.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/skills/: esp32-uds-gateway.md
docs/: hardware_schema.html
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  arm_button.c  arm_button.h  gw_nvs.c  gw_nvs.h  http_server.c  http_server.h  idf_component.yml  isotp_layer.c  isotp_layer.h  main.c  seed_to_key.c  status_led.c  status_led.h  tester_present.c  tester_present.h  twai_driver.c  twai_driver.h  uds_service.c  uds_service.h  ws_proto.c  ws_proto.h
tools/: uds_test_client.py  ws_bridge.py
webui/: app.css  app.js  index.html
